--- a/ORC calculate Tout=const.ipynb
+++ b/ORC calculate Tout=const.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f485bbad",
+   "id": "c5e4e1eb",
    "metadata": {},
    "outputs": [
     {
@@ -176,8 +176,8 @@
     "#Начало расчёта - поток перед насосом\n",
     "streams.loc[\"COND-PUMP\", \"T\":\"Q\"] = [prop.p_q(Pcond,0,fluid)[\"T\"], Pcond, prop.p_q(Pcond,0,fluid)['H'],prop.p_q(Pcond,0,fluid)['S'], G, 0]\n",
     "\n",
-    "it = 5\n",
-    "for i in range(it):\n",
+    "#Цикл для сведения с регенератором\n",
+    "for i in range(5):\n",
     "    #Насос\n",
     "    from modules import pump\n",
     "    pump.calc(\"COND-PUMP\",\"PUMP-REG\", Ppump,KPDpump,fluid,streams,blocks)\n",
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "35eac53d",
+   "id": "a3d42cbf",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6c15bced",
+   "id": "1a86d6ae",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,6 @@
      "output_type": "stream",
      "text": [
       "-3.637978807091713e-12\n",
-      "51285.958676068796\n",
       "0.2339127831051779\n"
      ]
     }
