--- a/ORC calculate Tout=const.ipynb
+++ b/ORC calculate Tout=const.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c5e4e1eb",
+   "id": "f62b0677",
    "metadata": {},
    "outputs": [
     {
@@ -108,30 +108,20 @@
        "      <td>241.445904</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COND-PUMP1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     T     P           H         S           G    Q\n",
-       "IN-HEAT     200.000000  10.0  855.795516  2.317415  100.000000  1.0\n",
-       "HEAT-OUT     80.000000  10.0  342.935929  1.069080  100.000000  0.0\n",
-       "COND-PUMP    24.163111   0.2  230.020348  1.105003  241.445904  0.0\n",
-       "PUMP-REG     26.554694   5.0  234.199578  1.107795  241.445904  0.0\n",
-       "REG-HEAT     72.774581   5.0  293.442104  1.291482  241.445904  0.0\n",
-       "HEAT-TURB   190.000000   5.0  505.853902  1.812036  241.445904  1.0\n",
-       "TURB-REG     95.113832   0.2  451.988837  1.828426  241.445904  1.0\n",
-       "REG-COND     31.554694   0.2  392.746311  1.652053  241.445904  1.0\n",
-       "COND-PUMP1         NaN   NaN         NaN       NaN         NaN  NaN"
+       "                    T     P           H         S           G    Q\n",
+       "IN-HEAT    200.000000  10.0  855.795516  2.317415  100.000000  1.0\n",
+       "HEAT-OUT    80.000000  10.0  342.935929  1.069080  100.000000  0.0\n",
+       "COND-PUMP   24.163111   0.2  230.020348  1.105003  241.445904  0.0\n",
+       "PUMP-REG    26.554694   5.0  234.199578  1.107795  241.445904  0.0\n",
+       "REG-HEAT    72.774581   5.0  293.442104  1.291482  241.445904  0.0\n",
+       "HEAT-TURB  190.000000   5.0  505.853902  1.812036  241.445904  1.0\n",
+       "TURB-REG    95.113832   0.2  451.988837  1.828426  241.445904  1.0\n",
+       "REG-COND    31.554694   0.2  392.746311  1.652053  241.445904  1.0"
       ]
      },
      "execution_count": 1,
@@ -214,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a3d42cbf",
+   "id": "b7474011",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a86d6ae",
+   "id": "c7f5d783",
    "metadata": {},
    "outputs": [
     {
