--- a/ORC calculate Tout=const.ipynb
+++ b/ORC calculate Tout=const.ipynb
@@ -38,74 +38,74 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>IN-HEAT</th>\n",
-       "      <td>300.000000</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1343.333966</td>\n",
-       "      <td>3.248794</td>\n",
-       "      <td>100.00000</td>\n",
+       "      <td>183.600000</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>615.516763</td>\n",
+       "      <td>7.334542</td>\n",
+       "      <td>509.000000</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HEAT-OUT</th>\n",
        "      <td>80.000000</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>342.935929</td>\n",
-       "      <td>1.069080</td>\n",
-       "      <td>100.00000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>503.727572</td>\n",
+       "      <td>7.057047</td>\n",
+       "      <td>509.000000</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>COND-PUMP</th>\n",
-       "      <td>24.163111</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>230.020348</td>\n",
-       "      <td>1.105003</td>\n",
-       "      <td>412.91432</td>\n",
+       "      <td>29.838015</td>\n",
+       "      <td>0.243</td>\n",
+       "      <td>237.190329</td>\n",
+       "      <td>1.128791</td>\n",
+       "      <td>272.834558</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PUMP-REG</th>\n",
-       "      <td>26.554694</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>234.199578</td>\n",
-       "      <td>1.107795</td>\n",
-       "      <td>412.91432</td>\n",
+       "      <td>31.444901</td>\n",
+       "      <td>3.300</td>\n",
+       "      <td>239.890113</td>\n",
+       "      <td>1.130565</td>\n",
+       "      <td>272.834558</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>REG-HEAT</th>\n",
-       "      <td>135.626248</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>386.029888</td>\n",
-       "      <td>1.536542</td>\n",
-       "      <td>412.91432</td>\n",
+       "      <td>63.632373</td>\n",
+       "      <td>3.300</td>\n",
+       "      <td>281.274379</td>\n",
+       "      <td>1.259668</td>\n",
+       "      <td>272.834558</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HEAT-TURB</th>\n",
-       "      <td>280.000000</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>628.307278</td>\n",
-       "      <td>2.054369</td>\n",
-       "      <td>412.91432</td>\n",
+       "      <td>163.600000</td>\n",
+       "      <td>3.300</td>\n",
+       "      <td>489.828232</td>\n",
+       "      <td>1.790765</td>\n",
+       "      <td>272.834558</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TURB-REG</th>\n",
-       "      <td>194.033019</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>553.599110</td>\n",
-       "      <td>2.072285</td>\n",
-       "      <td>412.91432</td>\n",
+       "      <td>90.303055</td>\n",
+       "      <td>0.243</td>\n",
+       "      <td>446.813183</td>\n",
+       "      <td>1.804006</td>\n",
+       "      <td>272.834558</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>REG-COND</th>\n",
-       "      <td>41.554694</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>401.768801</td>\n",
-       "      <td>1.681187</td>\n",
-       "      <td>412.91432</td>\n",
+       "      <td>46.444901</td>\n",
+       "      <td>0.243</td>\n",
+       "      <td>405.428917</td>\n",
+       "      <td>1.682728</td>\n",
+       "      <td>272.834558</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -113,15 +113,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                    T     P            H         S          G    Q\n",
-       "IN-HEAT    300.000000  10.0  1343.333966  3.248794  100.00000  1.0\n",
-       "HEAT-OUT    80.000000  10.0   342.935929  1.069080  100.00000  0.0\n",
-       "COND-PUMP   24.163111   0.2   230.020348  1.105003  412.91432  0.0\n",
-       "PUMP-REG    26.554694   5.0   234.199578  1.107795  412.91432  0.0\n",
-       "REG-HEAT   135.626248   5.0   386.029888  1.536542  412.91432  0.0\n",
-       "HEAT-TURB  280.000000   5.0   628.307278  2.054369  412.91432  1.0\n",
-       "TURB-REG   194.033019   0.2   553.599110  2.072285  412.91432  1.0\n",
-       "REG-COND    41.554694   0.2   401.768801  1.681187  412.91432  1.0"
+       "                    T      P           H         S           G    Q\n",
+       "IN-HEAT    183.600000  0.100  615.516763  7.334542  509.000000  1.0\n",
+       "HEAT-OUT    80.000000  0.100  503.727572  7.057047  509.000000  1.0\n",
+       "COND-PUMP   29.838015  0.243  237.190329  1.128791  272.834558  0.0\n",
+       "PUMP-REG    31.444901  3.300  239.890113  1.130565  272.834558  0.0\n",
+       "REG-HEAT    63.632373  3.300  281.274379  1.259668  272.834558  0.0\n",
+       "HEAT-TURB  163.600000  3.300  489.828232  1.790765  272.834558  1.0\n",
+       "TURB-REG    90.303055  0.243  446.813183  1.804006  272.834558  1.0\n",
+       "REG-COND    46.444901  0.243  405.428917  1.682728  272.834558  1.0"
       ]
      },
      "execution_count": 1,
@@ -139,22 +139,23 @@
     "blocks  = pd.read_excel(\"blocks.xlsx\" ,index_col=0)\n",
     "\n",
     "#Параметры нагревающей среды\n",
-    "gas     = \"REFPROP::WATER\"              #Состав газа\n",
-    "Tin     = 300                           #Температура газов на входе\n",
+    "gas     = 'REFPROP::N2[0.7757]&O2[0.1068]&CO2[0.0193]&H2O[0.0936]&Ar[0.0046]'    #Состав газа\n",
+    "Tin     = 183.6                         #Температура газов на входе\n",
+    "Pgas    = 0.1                           #Давление газов\n",
+    "Ggas    = 509                           #Расход газов\n",
     "Toutmin = 80                            #Температура газов на выходе\n",
-    "Ggas    = 100                           #Расход газов\n",
-    "Pgas    = 10                            #Давление газов\n",
     "Hgasin  = prop.t_p(Tin,Pgas,gas)[\"H\"]   #Энтальпия газов на входе\n",
+    "\n",
     "\n",
     "#Параметры ОЦР\n",
     "fluid = \"REFPROP::R236ea\"\n",
-    "Ppump = 5                 #Давление на выходе из насоса\n",
-    "Pcond = 0.2               #Давление в конденсаторе\n",
-    "KPDpump = 0.8             #КПД насоса\n",
-    "KPDturb = 0.9             #КПД турбины\n",
-    "G = 100                   #Расход среды (на 1 шаге)\n",
-    "dTmin = 15                #Минимальный напор в регенераторе\n",
-    "dTmin_heater = 20         #Напор в нагревателе\n",
+    "Ppump = 3.3                 #Давление на выходе из насоса\n",
+    "Pcond = 0.243               #Давление в конденсаторе\n",
+    "KPDpump = 0.8               #КПД насоса\n",
+    "KPDturb = 0.9               #КПД турбины\n",
+    "G = 100                     #Расход среды (на 1 шаге)\n",
+    "dTmin = 15                  #Минимальный напор в регенераторе\n",
+    "dTmin_heater = 20           #Напор в нагревателе\n",
     "\n",
     "#Внос данных в таблицу\n",
     "streams.loc[\"IN-HEAT\", \"T\":\"Q\"] = [Tin,Pgas,Hgasin,prop.h_p(Hgasin,Pgas,gas)[\"S\"],Ggas,1]\n",
@@ -163,7 +164,7 @@
     "streams.loc[\"COND-PUMP\", \"T\":\"Q\"] = [prop.p_q(Pcond,0,fluid)[\"T\"],Pcond,prop.p_q(Pcond,0,fluid)['H'],prop.p_q(Pcond,0,fluid)['S'],G,0]\n",
     "\n",
     "#Цикл для сведения с регенератором\n",
-    "for i in range(5):\n",
+    "for i in range(3):\n",
     "    #Насос\n",
     "    from modules import pump\n",
     "    pump.calc(\"COND-PUMP\",\"PUMP-REG\",Ppump,KPDpump,fluid,streams,blocks)\n",
@@ -225,40 +226,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>PUMP</th>\n",
-       "      <td>1725.663805</td>\n",
+       "      <td>736.594314</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TURBINE</th>\n",
-       "      <td>30848.072050</td>\n",
+       "      <td>11735.991910</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>REGENERATOR</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>62692.909060</td>\n",
+       "      <td>11291.057889</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CONDENSER</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>70917.395476</td>\n",
+       "      <td>45901.300581</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HEATER</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>100039.803721</td>\n",
+       "      <td>56900.698177</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        N              Q\n",
-       "PUMP          1725.663805            NaN\n",
-       "TURBINE      30848.072050            NaN\n",
-       "REGENERATOR           NaN   62692.909060\n",
-       "CONDENSER             NaN   70917.395476\n",
-       "HEATER                NaN  100039.803721"
+       "                        N             Q\n",
+       "PUMP           736.594314           NaN\n",
+       "TURBINE      11735.991910           NaN\n",
+       "REGENERATOR           NaN  11291.057889\n",
+       "CONDENSER             NaN  45901.300581\n",
+       "HEATER                NaN  56900.698177"
       ]
      },
      "execution_count": 2,
@@ -280,8 +281,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-7.275957614183426e-12\n",
-      "0.2911082105526925\n"
+      "-1.8189894035458565e-12\n",
+      "0.1933086578558544\n"
      ]
     }
    ],
@@ -293,6 +294,14 @@
     "KPD =(blocks.loc['TURBINE','N']-blocks.loc['PUMP','N'])/ blocks.loc['HEATER','Q']\n",
     "print(KPD)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3f6cd8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
