--- a/ORC calculate Tout=const.ipynb
+++ b/ORC calculate Tout=const.ipynb
@@ -4,133 +4,31 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f62b0677",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>T</th>\n",
-       "      <th>P</th>\n",
-       "      <th>H</th>\n",
-       "      <th>S</th>\n",
-       "      <th>G</th>\n",
-       "      <th>Q</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>IN-HEAT</th>\n",
-       "      <td>183.600000</td>\n",
-       "      <td>0.100</td>\n",
-       "      <td>615.516763</td>\n",
-       "      <td>7.334542</td>\n",
-       "      <td>509.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HEAT-OUT</th>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>0.100</td>\n",
-       "      <td>503.727572</td>\n",
-       "      <td>7.057047</td>\n",
-       "      <td>509.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COND-PUMP</th>\n",
-       "      <td>29.838015</td>\n",
-       "      <td>0.243</td>\n",
-       "      <td>237.190329</td>\n",
-       "      <td>1.128791</td>\n",
-       "      <td>272.834558</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PUMP-REG</th>\n",
-       "      <td>31.444901</td>\n",
-       "      <td>3.300</td>\n",
-       "      <td>239.890113</td>\n",
-       "      <td>1.130565</td>\n",
-       "      <td>272.834558</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>REG-HEAT</th>\n",
-       "      <td>63.632373</td>\n",
-       "      <td>3.300</td>\n",
-       "      <td>281.274379</td>\n",
-       "      <td>1.259668</td>\n",
-       "      <td>272.834558</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HEAT-TURB</th>\n",
-       "      <td>163.600000</td>\n",
-       "      <td>3.300</td>\n",
-       "      <td>489.828232</td>\n",
-       "      <td>1.790765</td>\n",
-       "      <td>272.834558</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TURB-REG</th>\n",
-       "      <td>90.303055</td>\n",
-       "      <td>0.243</td>\n",
-       "      <td>446.813183</td>\n",
-       "      <td>1.804006</td>\n",
-       "      <td>272.834558</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>REG-COND</th>\n",
-       "      <td>46.444901</td>\n",
-       "      <td>0.243</td>\n",
-       "      <td>405.428917</td>\n",
-       "      <td>1.682728</td>\n",
-       "      <td>272.834558</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    T      P           H         S           G    Q\n",
-       "IN-HEAT    183.600000  0.100  615.516763  7.334542  509.000000  1.0\n",
-       "HEAT-OUT    80.000000  0.100  503.727572  7.057047  509.000000  1.0\n",
-       "COND-PUMP   29.838015  0.243  237.190329  1.128791  272.834558  0.0\n",
-       "PUMP-REG    31.444901  3.300  239.890113  1.130565  272.834558  0.0\n",
-       "REG-HEAT    63.632373  3.300  281.274379  1.259668  272.834558  0.0\n",
-       "HEAT-TURB  163.600000  3.300  489.828232  1.790765  272.834558  1.0\n",
-       "TURB-REG    90.303055  0.243  446.813183  1.804006  272.834558  1.0\n",
-       "REG-COND    46.444901  0.243  405.428917  1.682728  272.834558  1.0"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "HmolarPmolar: One or more inputs are out of range; Temperature below triple-point or minimum temperature: T = 238.418 K, Tmin = 240.000 K.                                                                                                                                  ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 35>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;66;03m#Нагреватель\u001b[39;00m\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodules\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m heater\n\u001b[1;32m---> 46\u001b[0m \u001b[43mheater\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mIN-HEAT\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHEAT-OUT\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mREG-HEAT\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHEAT-TURB\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mToutmin\u001b[49m\u001b[43m,\u001b[49m\u001b[43mminDTheater\u001b[49m\u001b[43m,\u001b[49m\u001b[43mgas\u001b[49m\u001b[43m,\u001b[49m\u001b[43mfluid\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstreams\u001b[49m\u001b[43m,\u001b[49m\u001b[43mblocks\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     48\u001b[0m \u001b[38;5;66;03m#Турбина\u001b[39;00m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodules\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m turbine\n",
+      "File \u001b[1;32mC:\\pyscripts\\github\\ORC\\modules.py:44\u001b[0m, in \u001b[0;36mheater.calc\u001b[1;34m(stream11, stream12, stream21, stream22, Toutmin, minDTheater, fluid1, fluid2, streams, blocks)\u001b[0m\n\u001b[0;32m     42\u001b[0m     minDT\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mround\u001b[39m(\u001b[38;5;28mmin\u001b[39m(DT),\u001b[38;5;241m5\u001b[39m)\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m minDT\u001b[38;5;241m-\u001b[39mminDTheater\n\u001b[1;32m---> 44\u001b[0m sol \u001b[38;5;241m=\u001b[39m \u001b[43mroot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mG2sved\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mG2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     45\u001b[0m G2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(sol\u001b[38;5;241m.\u001b[39mx)\n\u001b[0;32m     47\u001b[0m t1  \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(s\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "File \u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\scipy\\optimize\\_root.py:187\u001b[0m, in \u001b[0;36mroot\u001b[1;34m(fun, x0, args, method, jac, tol, callback, options)\u001b[0m\n\u001b[0;32m    184\u001b[0m         options\u001b[38;5;241m.\u001b[39msetdefault(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfatol\u001b[39m\u001b[38;5;124m'\u001b[39m, np\u001b[38;5;241m.\u001b[39minf)\n\u001b[0;32m    186\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m meth \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhybr\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m--> 187\u001b[0m     sol \u001b[38;5;241m=\u001b[39m _root_hybr(fun, x0, args\u001b[38;5;241m=\u001b[39margs, jac\u001b[38;5;241m=\u001b[39mjac, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39moptions)\n\u001b[0;32m    188\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m meth \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlm\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m    189\u001b[0m     sol \u001b[38;5;241m=\u001b[39m _root_leastsq(fun, x0, args\u001b[38;5;241m=\u001b[39margs, jac\u001b[38;5;241m=\u001b[39mjac, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39moptions)\n",
+      "File \u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\scipy\\optimize\\minpack.py:237\u001b[0m, in \u001b[0;36m_root_hybr\u001b[1;34m(func, x0, args, jac, col_deriv, xtol, maxfev, band, eps, factor, diag, **unknown_options)\u001b[0m\n\u001b[0;32m    235\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m maxfev \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    236\u001b[0m         maxfev \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m200\u001b[39m \u001b[38;5;241m*\u001b[39m (n \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m--> 237\u001b[0m     retval \u001b[38;5;241m=\u001b[39m \u001b[43m_minpack\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_hybrd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mxtol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmaxfev\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    238\u001b[0m \u001b[43m                             \u001b[49m\u001b[43mml\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepsfcn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfactor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdiag\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    239\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    240\u001b[0m     _check_func(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfsolve\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfprime\u001b[39m\u001b[38;5;124m'\u001b[39m, Dfun, x0, args, n, (n, n))\n",
+      "File \u001b[1;32mC:\\pyscripts\\github\\ORC\\modules.py:33\u001b[0m, in \u001b[0;36mheater.calc.<locals>.G2sved\u001b[1;34m(G2)\u001b[0m\n\u001b[0;32m     31\u001b[0m         Q[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m Q[i]\u001b[38;5;241m+\u001b[39mdQ\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(s\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m---> 33\u001b[0m     t2[s\u001b[38;5;241m-\u001b[39mi] \u001b[38;5;241m=\u001b[39m \u001b[43mprop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mh_p\u001b[49m\u001b[43m(\u001b[49m\u001b[43mh21\u001b[49m\u001b[43m,\u001b[49m\u001b[43mP2\u001b[49m\u001b[43m,\u001b[49m\u001b[43mfluid2\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m<\u001b[39m s:\n\u001b[0;32m     35\u001b[0m         h22 \u001b[38;5;241m=\u001b[39m h21\u001b[38;5;241m+\u001b[39m(Q[s\u001b[38;5;241m-\u001b[39mi]\u001b[38;5;241m-\u001b[39mQ[s\u001b[38;5;241m-\u001b[39mi\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\u001b[38;5;241m/\u001b[39mG2\n",
+      "File \u001b[1;32mC:\\pyscripts\\github\\ORC\\prop.py:18\u001b[0m, in \u001b[0;36mh_p\u001b[1;34m(H, P, fluid)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mh_p\u001b[39m(H,P,fluid):\n\u001b[1;32m---> 18\u001b[0m     T \u001b[38;5;241m=\u001b[39m \u001b[43mprop\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mT\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mH\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mH\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mP\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mP\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfluid\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m273.15\u001b[39m\n\u001b[0;32m     19\u001b[0m     H \u001b[38;5;241m=\u001b[39m H\n\u001b[0;32m     20\u001b[0m     P \u001b[38;5;241m=\u001b[39m P\n",
+      "File \u001b[1;32mCoolProp\\CoolProp.pyx:373\u001b[0m, in \u001b[0;36mCoolProp.CoolProp.PropsSI\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mCoolProp\\CoolProp.pyx:460\u001b[0m, in \u001b[0;36mCoolProp.CoolProp.PropsSI\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: HmolarPmolar: One or more inputs are out of range; Temperature below triple-point or minimum temperature: T = 238.418 K, Tmin = 240.000 K.                                                                                                                                  "
+     ]
     }
    ],
    "source": [
-    "#Цикл всегда 80 с переопределением расхода\n",
+    "#Цикл с переопределением расхода\n",
     "import prop\n",
     "import pandas as pd\n",
     "\n",
@@ -153,9 +51,9 @@
     "Pcond = 0.243               #Давление в конденсаторе\n",
     "KPDpump = 0.8               #КПД насоса\n",
     "KPDturb = 0.9               #КПД турбины\n",
-    "G = 100                     #Расход среды (на 1 шаге)\n",
-    "dTmin = 15                  #Минимальный напор в регенераторе\n",
-    "dTmin_heater = 20           #Напор в нагревателе\n",
+    "G = 500                     #Расход среды (на 1 шаге)\n",
+    "dTmin = 10                  #Минимальный напор в регенераторе\n",
+    "minDTheater = 20           #Напор в нагревателе\n",
     "\n",
     "#Внос данных в таблицу\n",
     "streams.loc[\"IN-HEAT\", \"T\":\"Q\"] = [Tin,Pgas,Hgasin,prop.h_p(Hgasin,Pgas,gas)[\"S\"],Ggas,1]\n",
@@ -163,8 +61,8 @@
     "#Начало расчёта - поток перед насосом\n",
     "streams.loc[\"COND-PUMP\", \"T\":\"Q\"] = [prop.p_q(Pcond,0,fluid)[\"T\"],Pcond,prop.p_q(Pcond,0,fluid)['H'],prop.p_q(Pcond,0,fluid)['S'],G,0]\n",
     "\n",
-    "#Цикл для сведения с регенератором\n",
-    "for i in range(3):\n",
+    "#Цикл для сведения расхода\n",
+    "for i in range(15):\n",
     "    #Насос\n",
     "    from modules import pump\n",
     "    pump.calc(\"COND-PUMP\",\"PUMP-REG\",Ppump,KPDpump,fluid,streams,blocks)\n",
@@ -173,9 +71,9 @@
     "    from modules import regen\n",
     "    regen.calc(\"TURB-REG\",\"REG-COND\",\"PUMP-REG\",\"REG-HEAT\",dTmin,fluid,streams,blocks)\n",
     "\n",
-    "    #Нагреватель с расчётом расхода\n",
-    "    from modules import heater80\n",
-    "    heater80.calc(\"IN-HEAT\",\"HEAT-OUT\",\"REG-HEAT\",\"HEAT-TURB\",dTmin_heater,Toutmin,gas,fluid,streams,blocks)\n",
+    "    #Нагреватель\n",
+    "    from modules import heater\n",
+    "    heater.calc(\"IN-HEAT\",\"HEAT-OUT\",\"REG-HEAT\",\"HEAT-TURB\",Toutmin,minDTheater,gas,fluid,streams,blocks)\n",
     "\n",
     "    #Турбина\n",
     "    from modules import turbine\n",
@@ -188,117 +86,40 @@
     "    #Конденсатор\n",
     "    from modules import condenser\n",
     "    condenser.calc(\"REG-COND\",\"COND-PUMP\",fluid,streams,blocks)\n",
+    "#     print(streams)\n",
     "\n",
-    "streams"
+    "# streams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b7474011",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>N</th>\n",
-       "      <th>Q</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>PUMP</th>\n",
-       "      <td>736.594314</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TURBINE</th>\n",
-       "      <td>11735.991910</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>REGENERATOR</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11291.057889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CONDENSER</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>45901.300581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HEATER</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>56900.698177</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        N             Q\n",
-       "PUMP           736.594314           NaN\n",
-       "TURBINE      11735.991910           NaN\n",
-       "REGENERATOR           NaN  11291.057889\n",
-       "CONDENSER             NaN  45901.300581\n",
-       "HEATER                NaN  56900.698177"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "blocks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c7f5d783",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1.8189894035458565e-12\n",
-      "0.1933086578558544\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Баланс\n",
     "print(blocks.loc['HEATER','Q']+blocks.loc['PUMP','N']-blocks.loc['CONDENSER','Q']-blocks.loc['TURBINE','N'])\n",
     "\n",
     "#КПД\n",
-    "KPD =(blocks.loc['TURBINE','N']-blocks.loc['PUMP','N'])/ blocks.loc['HEATER','Q']\n",
+    "KPD =100*(blocks.loc['TURBINE','N']-blocks.loc['PUMP','N'])/ blocks.loc['HEATER','Q']\n",
     "print(KPD)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3f6cd8b",
+   "id": "12e312db",
    "metadata": {},
    "outputs": [],
    "source": []
