--- a/С регенератором.ipynb
+++ b/С регенератором.ipynb
@@ -68,9 +68,9 @@
     "\n",
     "#Параметры ОЦР:\n",
     "fluid   = \"REFPROP::R236ea\"   #Рабочая среда цикла\n",
-    "Ppump   = 3.5                 #Давление на выходе из насоса\n",
+    "Ppump   = 4.3                 #Давление на выходе из насоса\n",
     "KPDpump = 0.8                 #КПД насоса\n",
-    "KPDturb = 0.9                 #КПД турбины\n",
+    "KPDturb = 0.85                 #КПД турбины\n",
     "DTheat  = 20                  #Минимальный напор в нагревателе\n",
     "DTcond  = 5                   #Минимальный напор в конденсаторе\n",
     "Pcond   = prop.t_q(30,0,fluid)['P']               #Давление в конденсаторе\n",
@@ -78,9 +78,9 @@
     "#Первое приближение\n",
     "\n",
     "\n",
-    "dTreg   = 8                   #Минимальный напор в регенераторе\n",
-    "dPreg1  = 0.02                #Потери по горячему в МПа\n",
-    "dPreg2  = 0.02                 #Потери по холодному\n",
+    "dTreg   = 5                   #Минимальный напор в регенераторе\n",
+    "dPreg1  = 0                #Потери по горячему в МПа\n",
+    "dPreg2  = 0                 #Потери по холодному\n",
     "\n",
     "for j in range(100):\n",
     "    streams = pd.read_excel(\"streams.xlsx\",index_col=0)\n",
@@ -112,17 +112,18 @@
     "            break\n",
     "\n",
     "\n",
-    "    REGEN = regen.constr(\"TURB-REG\",  \"REG-COND\",  \"PUMP-REG\",\"REG-HEAT\",dPreg1,dPreg2,streams,blocks)\n",
+    "#     REGEN = regen.constr(\"TURB-REG\",  \"REG-COND\",  \"PUMP-REG\",\"REG-HEAT\",dPreg1,dPreg2,streams,blocks)\n",
     "    KPD = (blocks.loc['TURBINE','N']-blocks.loc['PUMP','N'])/blocks.loc['HEATER','Q']\n",
     "    \n",
-    "    dPreg1  = REGEN['dP1']\n",
-    "    dPreg2  = REGEN['dP2']\n",
-    "    if j != 0:\n",
-    "        if abs(dPreg1-dP1last)/dPreg1 < 0.1: #Макс расхождение потерь 10%\n",
-    "            break\n",
-    "    dP1last = dPreg1\n",
+    "#     dPreg1  = REGEN['dP1']\n",
+    "#     dPreg2  = REGEN['dP2']\n",
+    "#     if j != 0:\n",
+    "#         if abs(dPreg1-dP1last)/dPreg1 < 0.1: #Макс расхождение потерь 10%\n",
+    "#             break\n",
+    "#     dP1last = dPreg1\n",
     "print (dTreg, round(REGEN['dP1'],5), round(REGEN['dP2'],5), round(KPD,5), REGEN['money'])\n",
-    "    "
+    "\n",
+    "\n"
    ]
   },
   {
